--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -29,132 +29,6 @@
     </div>
 </section>
 
-<section>
-    <div class="page-header">
-        <h1>Paused</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {{#if requests.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Instances</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requests}}
-                            <tr data-request-id="{{ id }}">
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ instances }}</td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
-                                    <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
-                                </td>
-                            </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No paused requests.</p></center>
-                {{else}}
-                    <div class="page-loader centered"></div>
-                {{/if}}
-            {{/if}}
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>On-demand</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {{#if requestsOnDemand.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th data-sortable="false"></th>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requestsOnDemand}}
-                            <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="run-now">Run now</a>
-                                    <a data-request-id="{{ id }}" data-action="remove">Remove</a>
-                                </td>
-                            </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No paused on-demand requests.</p></center>
-                {{else}}
-                    <div class="page-loader centered"></div>
-                {{/if}}
-            {{/if}}
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>Scheduled</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {{#if requestsScheduled.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Schedule</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requestsScheduled}}
-                            <tr data-request-id="{{ id }}">
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ schedule }}</td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
-                                    <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
-                                </td>
-                            </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No paused scheduled requests.</p></center>
-                {{else}}
-                    <div class="page-loader centered"></div>
-                {{/if}}
-            {{/if}}
-        </div>
-    </div>
-</section>
+<div data-requests-body-container>
+    {{> requestsBody}}
+</div>
