Reduce the space between two consecutive nav pills

--- a/SingularityUI/app/styles/navStyleTweaks.styl
+++ b/SingularityUI/app/styles/navStyleTweaks.styl
@@ -57,3 +57,6 @@ html
 
         .dropdown-menu li > a:hover, .dropdown-menu .active > a, .dropdown-menu .active > a:hover
             color #666
+
+.nav-pills-with-nav-pills-below
+    margin-bottom 0
