--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <ul class="nav nav-pills">
+            <ul class="nav nav-pills nav-pills-with-nav-pills-below">
                 <li class="active">
                     <a href="/singularity/requests" data-route="requests">Active</a>
                 </li>
