--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -1,7 +1,19 @@
 <header class="jumbotron subhead" id="overview">
     <h3><a href="/singularity/request/{{ request.id }}" data-route="request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
     <h1>{{#hardBreak taskHistory.task.name}}{{/hardBreak}} <small><a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>{{#if taskHistory.task.isFinished}}{{else}} &nbsp; <a data-task-id="{{ taskHistory.task.id }}" data-action="remove">Kill&nbsp;Task</a>{{/if}}</small></h1>
-    <p class="lead">{{#hardBreak taskHistory.task.id}}{{/hardBreak}}</p>
+    {{#if taskHistory.taskUpdates}}
+        {{#eachWithFn taskHistory.taskUpdates}}
+            {{#if _first}}
+                <p class="lead">
+                    {{ statusUpdateHuman }} as of
+                    {{ timestampHuman }}
+                    {{#ifEqual statusMessage "No status message available"}}{{else}}
+                        ({{ statusMessage }})
+                    {{/ifEqual}}
+                </p>
+            {{/if}}
+        {{/eachWithFn}}
+    {{/if}}
 </header>
 
 <section>
@@ -62,6 +74,10 @@
     <div class="row-fluid">
         <div class="span12">
             <dl>
+                {{#if taskHistory.task.id }}
+                    <dt>Task ID</dt>
+                    <dd><pre>{{ taskHistory.task.id }}</pre></dd>
+                {{/if}}
                 {{#if taskHistory.task.mesosTask.executor.executorId.value }}
                     <dt>Executor GUID</dt>
                     <dd><pre>{{ taskHistory.task.mesosTask.executor.executorId.value }}</pre></dd>
