--- a/SingularityUI/app/views/templates/requestsPausedBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPausedBody.hbs
@@ -17,7 +17,7 @@
                     </thead>
                     <tbody>
                         {{#eachWithFn requests}}
-                            <tr data-request-id="{{ id }}">
+                            <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
@@ -103,7 +103,7 @@
                     </thead>
                     <tbody>
                         {{#eachWithFn requestsScheduled}}
-                            <tr data-request-id="{{ id }}">
+                            <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
