Add `.filtered` styling for `table`s (in addition to `tr`s)

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -35,6 +35,9 @@ html.light-theme, html.dark-theme
 tr.filtered
     display none
 
+table.filtered
+    display none
+
 // Overrides
 
 #nav-user-name
