Better styling/treatment of empty table messages and table/content loading spinners

--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -35,7 +35,7 @@
                     </tbody>
                 </table>
             {{else}}
-                <center><p>No starred requests.</p></center>
+                <div class="empty-table-message"><p>No starred requests</p></div>
             {{/if}}
         </div>
     </section>
