--- a/SingularityUI/app/views/templates/requestsPendingBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPendingBody.hbs
@@ -16,5 +16,5 @@
         </tbody>
     </table>
 {{else}}
-    <center><p>No pending requests.</p></center>
+    <div class="empty-table-message"><p>No pending requests</p></div>
 {{/if}}
