--- a/SingularityUI/app/views/templates/searchResults.hbs
+++ b/SingularityUI/app/views/templates/searchResults.hbs
@@ -26,7 +26,7 @@
             </table>
         </div>
     {{else}}
-        <center><p>No requests found.</p></center>
+        <div class="empty-table-message"><p>No requests found</p></div>
     {{/if}}
 </section>
 
@@ -58,6 +58,6 @@
             </table>
         </div>
     {{else}}
-        <center><p>No tasks found.</p></center>
+        <div class="empty-table-message"><p>No tasks found</p></div>
     {{/if}}
 </section>
