--- a/SingularityUI/app/views/templates/tasksCleaningTable.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaningTable.hbs
@@ -19,7 +19,7 @@
     </table>
 {{else}}
     {{#if collectionSynced}}
-        <center><p>No cleaning tasks.</p></center>
+        <div class="empty-table-message"><p>No cleaning tasks</p></div>
     {{else}}
         <div class="page-loader centered"></div>
     {{/if}}
