--- a/SingularityUI/app/views/templates/tasksScheduledTable.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduledTable.hbs
@@ -22,7 +22,7 @@
     </table>
 {{else}}
     {{#if collectionSynced}}
-        <center><p>No scheduled tasks.</p></center>
+        <div class="empty-table-message"><p>No scheduled tasks</p></div>
     {{else}}
         <div class="page-loader centered"></div>
     {{/if}}
