--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -22,3 +22,22 @@
 
     .icon
         margin-right 10px
+
+.empty-table-message
+    text-align center
+    border 3px dashed #e7e7e7
+    padding 2.5em
+    color #888
+    font-size 1.3em
+    font-weight 300
+    letter-spacing .03em
+
+    p:last-child
+        margin-bottom 0
+
+.results > section + section > .empty-table-message, .empty-table-message + .empty-table-message
+    margin-top 0
+    border-top 0
+
+.page-header + .row-fluid > .span12 > .table + .empty-table-message, .page-header + .row-fluid > .span12 > .empty-table-message
+    margin-top calc(-1em - 3px)
