--- a/SingularityUI/app/views/templates/requestsCleaningBody.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaningBody.hbs
@@ -21,7 +21,7 @@
     </table>
 {{else}}
     {{#if collectionSynced}}
-        <center><p>No cleaning requests.</p></center>
+        <div class="empty-table-message"><p>No cleaning requests</p></div>
     {{else}}
         <div class="page-loader centered"></div>
     {{/if}}
