--- a/SingularityUI/app/views/templates/tasksActiveTable.hbs
+++ b/SingularityUI/app/views/templates/tasksActiveTable.hbs
@@ -30,7 +30,7 @@
     </table>
 {{else}}
     {{#if collectionSynced}}
-        <center><p>No active tasks.</p></center>
+        <div class="empty-table-message"><p>No active tasks</p></div>
     {{else}}
         <div class="page-loader centered"></div>
     {{/if}}
