Make remove dialog primary action buttons say "Remove" instead of "OK" (and make the button red instead of blue)

--- a/SingularityUI/app/styles/vex.styl
+++ b/SingularityUI/app/styles/vex.styl
@@ -1,5 +1,10 @@
+@import colors
+
 .vex
 
     pre
         border 0
         background #fff
+
+.vex.vex-theme-default .vex-dialog-button.vex-dialog-button-primary.vex-dialog-button-primary-remove
+    background $removeRed
