--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -1,12 +1,22 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{#hardBreak request.name}}{{/hardBreak}} <small>{{#if request.fullObject}}<a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a>{{/if}} &nbsp; {{#if request.scheduledOrOnDemand}}<a data-request-id="{{ request.id }}" data-action="run-request-now">Run now</a> &nbsp; {{/if}}<a data-request-id="{{ request.id }}" data-action="remove">Remove</a></small></h1>
-    <p class="lead">
-        {{#eachWithFn requestHistory.requestUpdates}}
-            {{#if _first}}
-                <p class="lead">{{ stateHuman }} by {{ userHuman }} <strong>{{ createdAtHuman }}</strong></p>
+    <h1>
+        {{#hardBreak request.name}}{{/hardBreak}}
+
+        <div class="header-actions">
+            {{#if request.fullObject}}
+                <a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a>
             {{/if}}
-        {{/eachWithFn}}
-    </p>
+            {{#if request.scheduledOrOnDemand}}
+                <a data-request-id="{{ request.id }}" data-action="run-request-now">Run now</a>
+            {{/if}}
+            <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
+        </div>
+    </h1>
+    {{#eachWithFn requestHistory.requestUpdates}}
+        {{#if _first}}
+            <p class="lead">{{ stateHuman }} by {{ userHuman }} {{ createdAtHuman }}</p>
+        {{/if}}
+    {{/eachWithFn}}
 </header>
 
 <section>
