--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -1,6 +1,14 @@
 <header class="jumbotron subhead" id="overview">
     <h3><a href="/singularity/request/{{ request.id }}" data-route="request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
-    <h1>{{#hardBreak taskHistory.task.name}}{{/hardBreak}} <small><a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>{{#if taskHistory.task.isFinished}}{{else}} &nbsp; <a data-task-id="{{ taskHistory.task.id }}" data-action="remove">Kill&nbsp;Task</a>{{/if}}</small></h1>
+    <h1>
+        {{#hardBreak taskHistory.task.name}}{{/hardBreak}}
+        <div class="header-actions">
+            <a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>
+            {{#if taskHistory.task.isFinished}}{{else}}
+                <a data-task-id="{{ taskHistory.task.id }}" data-action="remove">Kill task</a>
+            {{/if}}
+        </div>
+    </h1>
     {{#if taskHistory.taskUpdates}}
         {{#eachWithFn taskHistory.taskUpdates}}
             {{#if _first}}
@@ -45,11 +53,11 @@
         </div>
     {{else}}
         {{#if taskHistory.hasNoTaskUpdates}}
-            <center><p>This task has no history yet.</p></center>
-            <br>
-            <div class="page-loader centered"></div>
-            <br>
-            <center><p>Refreshing history...</p></center>
+            <div class="empty-table-message"><p>This task has no history yet.</p></div>
+            <div class="page-loader-with-message">
+                <div class="page-loader centered"></div>
+                <p>Refreshing history...</p>
+            </div>
         {{else}}
             <div class="page-loader centered"></div>
         {{/if}}
