Allow specifying additional arguments to on-demand tasks (Resolves #74) and related changes:
1) Run now buttons for on-demand requests now open a vex prompt instead of a confirm
2) Optional argument data is passed to jQuery Ajax data (with processData false)
3) Individual request page now has a refresh method and will refresh itself 3 seconds after the response from `/run` is finished (in my testing, this was enough time for the new active task to show up)
4) Run now button on individual request page now actually works :P lol

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -7,7 +7,7 @@
                 <a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a>
             {{/if}}
             {{#if request.scheduledOrOnDemand}}
-                <a data-request-id="{{ request.id }}" data-action="run-request-now">Run now</a>
+                <a data-request-id="{{ request.id }}" data-request-type="{{#if request.onDemand}}on-demand{{else}}scheduled{{/if}}" data-action="run-request-now">Run now</a>
             {{/if}}
             <a data-request-id="{{ request.id }}" data-action="remove">Remove</a>
         </div>
