--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -4,7 +4,7 @@
         {{#hardBreak taskHistory.task.name}}{{/hardBreak}}
         <div class="header-actions">
             <a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>
-            {{#if taskHistory.task.isFinished}}{{else}}
+            {{#if taskHistory.task.isStopped}}{{else}}
                 <a data-task-id="{{ taskHistory.task.id }}" data-action="remove">Kill task</a>
             {{/if}}
         </div>
