Give some spinners a little cushion

--- a/SingularityUI/app/styles/loader.styl
+++ b/SingularityUI/app/styles/loader.styl
@@ -28,6 +28,10 @@
     &.centered
         margin 0 auto
 
+        &.cushy
+            margin-top: 3em
+            margin-bottom: 3em
+
 .page-loader-with-message
     text-align center
     margin 2em 0
