--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -66,5 +66,5 @@
         </section>
     {{/if}}
 {{else}}
-    <div class="page-loader centered"></div>
+    <div class="page-loader centered cushy"></div>
 {{/if}}
