--- a/SingularityUI/app/views/templates/requestsActiveBody.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveBody.hbs
@@ -34,7 +34,7 @@
                     {{#if collectionSynced}}
                         <div class="empty-table-message"><p>No active running requests</p></div>
                     {{else}}
-                        <div class="page-loader centered"></div>
+                        <div class="page-loader centered cushy"></div>
                     {{/if}}
                 {{/if}}
             {{/ifEqual}}
@@ -68,7 +68,7 @@
                     {{#if collectionSynced}}
                         <div class="empty-table-message"><p>No on-demand requests</p></div>
                     {{else}}
-                        <div class="page-loader centered"></div>
+                        <div class="page-loader centered cushy"></div>
                     {{/if}}
                 {{/if}}
             {{/ifEqual}}
@@ -106,7 +106,7 @@
                     {{#if collectionSynced}}
                         <div class="empty-table-message"><p>No active scheduled requests</p></div>
                     {{else}}
-                        <div class="page-loader centered"></div>
+                        <div class="page-loader centered cushy"></div>
                     {{/if}}
                 {{/if}}
             {{/ifEqual}}
