--- a/SingularityUI/app/views/templates/requestsCleaningBody.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaningBody.hbs
@@ -23,6 +23,6 @@
     {{#if collectionSynced}}
         <div class="empty-table-message"><p>No cleaning requests</p></div>
     {{else}}
-        <div class="page-loader centered"></div>
+        <div class="page-loader centered cushy"></div>
     {{/if}}
 {{/if}}
