--- a/SingularityUI/app/views/templates/tasksActiveTable.hbs
+++ b/SingularityUI/app/views/templates/tasksActiveTable.hbs
@@ -32,6 +32,6 @@
     {{#if collectionSynced}}
         <div class="empty-table-message"><p>No active tasks</p></div>
     {{else}}
-        <div class="page-loader centered"></div>
+        <div class="page-loader centered cushy"></div>
     {{/if}}
 {{/if}}
