--- a/SingularityUI/app/views/templates/tasksScheduledTable.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduledTable.hbs
@@ -24,6 +24,6 @@
     {{#if collectionSynced}}
         <div class="empty-table-message"><p>No scheduled tasks</p></div>
     {{else}}
-        <div class="page-loader centered"></div>
+        <div class="page-loader centered cushy"></div>
     {{/if}}
 {{/if}}
