--- a/SingularityUI/app/views/templates/tasksCleaningTable.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaningTable.hbs
@@ -21,6 +21,6 @@
     {{#if collectionSynced}}
         <div class="empty-table-message"><p>No cleaning tasks</p></div>
     {{else}}
-        <div class="page-loader centered"></div>
+        <div class="page-loader centered cushy"></div>
     {{/if}}
 {{/if}}
