--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -1,7 +1,7 @@
 <header class="jumbotron subhead" id="overview">
     <h3><a href="/singularity/request/{{ request.id }}" data-route="request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
     <h1>
-        {{#hardBreak taskHistory.task.name}}{{/hardBreak}}
+        {{#hardBreak taskHistory.task.id}}{{/hardBreak}}
         <div class="header-actions">
             <a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>
             {{#if taskHistory.task.isStopped}}{{else}}
