Make `pre` scrollable in JSON vex dialogs

--- a/SingularityUI/app/styles/vex.styl
+++ b/SingularityUI/app/styles/vex.styl
@@ -8,3 +8,27 @@
 
 .vex.vex-theme-default .vex-dialog-button.vex-dialog-button-primary.vex-dialog-button-primary-remove
     background $removeRed
+
+.vex.vex-theme-default.vex-theme-default-json-view
+
+    .vex-content
+        position absolute
+        margin auto
+        left 0
+        right 0
+        top 20px
+        bottom 20px
+        width 1200px
+        max-width 90%
+
+        pre
+            position absolute
+            top 20px
+            left 20px
+            right 20px
+            bottom 60px
+
+        .vex-dialog-buttons
+            position: absolute
+            bottom: 20px
+            right: 20px
