Better nav styles

--- a/SingularityUI/app/styles/navStyleTweaks.styl
+++ b/SingularityUI/app/styles/navStyleTweaks.styl
@@ -20,20 +20,17 @@ html
             > li.active
 
                 > a, > a:hover
-                    color #555
+                    color #fff
                     text-decoration none
-                    background-color #e0e0e0
+                    background-color #08c
                     box-shadow none
 
             .divider-vertical
                 border-right 1px solid #ccc
 
             li.dropdown .dropdown-toggle .caret, li.dropdown.open .caret
-                border-top-color #666
-                border-bottom-color #666
-
-            li.dropdown.active > .dropdown-toggle:hover
-                color #666
+                border-top-color inherit
+                border-bottom-color inherit
 
         .btn-navbar
             background-color #f0f0f0
