--- a/SingularityUI/app/views/templates/tasksScheduledTable.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduledTable.hbs
@@ -3,7 +3,7 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Next run</th>
+                <th class="visible-desktop">Next run</th>
                 <th data-sortable="false"></th>
             </tr>
         </thead>
@@ -11,7 +11,7 @@
             {{#eachWithFn tasks}}
                 <tr data-task-id="{{ id }}">
                     <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
-                    <td data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
+                    <td class="visible-desktop" data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
                     <td class="actions-column">
                         <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
                         <a data-task-id="{{ id }}" data-action="run-now">Run now</a>
