--- a/SingularityUI/app/views/templates/requestsPausedBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPausedBody.hbs
@@ -9,20 +9,20 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Instances</th>
-                            <th data-sortable="false"></th>
+                            <th class="hidden-phone">Requested</th>
+                            <th class="visible-desktop">Deploy User</th>
+                            <th class="visible-desktop">Instances</th>
+                            <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
                     </thead>
                     <tbody>
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ instances }}</td>
-                                <td class="actions-column">
+                                <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                <td class="visible-desktop">{{ deployUser }}</td>
+                                <td class="visible-desktop">{{ instances }}</td>
+                                <td class="actions-column hidden-phone">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
                                     <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
@@ -54,8 +54,8 @@
                         <tr>
                             <th data-sortable="false"></th>
                             <th>Name</th>
-                            <th>Requested</th>
-                            <th data-sortable="false"></th>
+                            <th class="visible-desktop">Requested</th>
+                            <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -63,8 +63,8 @@
                             <tr data-request-id="{{ id }}">
                                 <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td class="actions-column">
+                                <td class="visible-desktop" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                <td class="actions-column hidden-phone">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     <a data-request-id="{{ id }}" data-action="run-now">Run now</a>
                                     <a data-request-id="{{ id }}" data-action="remove">Remove</a>
@@ -95,20 +95,20 @@
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Schedule</th>
-                            <th data-sortable="false"></th>
+                            <th class="visible-desktop">Requested</th>
+                            <th class="visible-large-desktop">Deploy User</th>
+                            <th class="visible-desktop">Schedule</th>
+                            <th class="hidden-phone" data-sortable="false"></th>
                         </tr>
                     </thead>
                     <tbody>
                         {{#eachWithFn requestsScheduled}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ schedule }}</td>
-                                <td class="actions-column">
+                                <td class="visible-desktop" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                <td class="visible-large-desktop">{{ deployUser }}</td>
+                                <td class="visible-desktop">{{ schedule }}</td>
+                                <td class="actions-column hidden-phone">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
                                     <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
