--- a/SingularityService/src/main/resources/templates/request_paused.jade
+++ b/SingularityService/src/main/resources/templates/request_paused.jade
@@ -1,50 +1,54 @@
-table(height="75px", width="100%", style="border: none")
-  tr
-    td(bgcolor="#FFA500")
-      font(size=5)
-        span(style="font-family: Helvetica; padding:10px")
-          span(style="color: white") ! #{request_id} is paused
-          || Requires manual intervention
+div(style="background: #eee")
+  div(style="background: #fff; width: 730px; padding: 20px; max-width: 100%; color: #444; border-radius: 5px; margin: 0 auto")
+    table(height="85px", width="100%", style="border: none")
+      tr
+        td(style="border-top: 10px solid #DF4210; padding: 20px; background: #eee; border-radius: 4px")
 
-p <b> Request: </b> #{request_id} is paused.
-p It has failed #{num_failures} times consecutively and will not run again until it is manually unpaused or updated.
-p: b Task Update History:
+          font(size=5)
+            span(style="font-family: Helvetica; padding: 10px")
+              <p>#{request_id} is paused.</p>
 
-table(style="border:1px solid black; border-collapse: collapse;")
-  tr
-    th(style="border:1px solid black; border-collapse: collapse;") DATETIME
-    th(style="border:1px solid black; border-collapse: collapse;") STATUS UPDATE
-  each task_update, i in task_updates
-    tr
-      td(style="border:1px solid black; border-collapse: collapse;")= task_update.date
-      td(style="border:1px solid black; border-collapse: collapse;")= task_update.update
+          font(size=3)
+            span(style="padding: 10px") <br><br> This requires manual intervention.
 
-p: b Request Update History
+    p <b>Request: </b> #{request_id} is paused.
+    p It has failed #{num_failures} times consecutively and will not run again until it is manually unpaused or updated.
 
-table(style="border:1px solid black; border-collapse: collapse;")
-  tr
-    th(style="border:1px solid black; border-collapse: collapse;") TIME
-    th(style="border:1px solid black; border-collapse: collapse;") STATUS UPDATE
-    th(style="border:1px solid black; border-collapse: collapse;") USER
-    th(style="border:1px solid black; border-collapse: collapse;") TASKID
+    p: b Task Update History
+    table(style="border: 0; border-collapse: collapse; background: #eee")
+      tr
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Status
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Time
+      each task_update, i in task_updates
+        tr
+          td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= task_update.update
+          td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= task_update.date
 
-  each request_update, i in request_history
-    tr
-      td(style="border:1px solid black; border-collapse: collapse;")= request_update.date
-      td(style="border:1px solid black; border-collapse: collapse;")= request_update.state
-      td(style="border:1px solid black; border-collapse: collapse;")= request_update.user
-      td(style="border:1px solid black; border-collapse: collapse;")= request_update.request_id
+    p: b Request Update History
 
-p: b StdOut:
-ul
-  for line in stdout
-    li= line
-  else
-    li No updates
+    table(style="border: 0; border-collapse: collapse; background: #eee")
+      tr
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Request ID
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Status
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") User
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Time
+      each request_update, i in request_history
+        tr
+          td(style="border:1px solid black; border-collapse: collapse;")= request_update.request_id
+          td(style="border:1px solid black; border-collapse: collapse;")= request_update.state
+          td(style="border:1px solid black; border-collapse: collapse;")= request_update.user
+          td(style="border:1px solid black; border-collapse: collapse;")= request_update.date
 
-p: b StdErr:
-ul
-  for line in stderr
-    li= line
-  else
-    li No updates
+    p: b Standard output:
+    ul
+      for line in stdout
+        li= line
+      else
+        li No updates
+
+    p: b Standard error:
+    ul
+      for line in stderr
+        li= line
+      else
+        li No updates
