--- a/SingularityService/src/main/resources/templates/task_failed.jade
+++ b/SingularityService/src/main/resources/templates/task_failed.jade
@@ -1,52 +1,60 @@
-table(height="85px", width="100%", style="border: none")
-  tr
-    td(bgcolor="#FFA500")
-      font(size=5)
-        span(style="font-family: Helvetica; padding: 10px")
-          span(style="color: white") ! #{request_id} has failed
-          if !taskEverRan || taskStateLost
-            || This is likely an infrastructure issue; no action is required
-          else
-            <span style="color: white"> on its own </span> | Consider investigating your process
-      font(size=3)
-        span(style="padding: 10px") <br><br> - Singularity will attempt to restart your task
+div(style="background: #eee")
+  div(style="background: #fff; width: 730px; padding: 20px; max-width: 100%; color: #444; border-radius: 5px; margin: 0 auto")
+    table(height="85px", width="100%", style="border: none")
+      tr
+        td(style="border-top: 10px solid #DF4210; padding: 20px; background: #eee; border-radius: 4px")
 
-p <b> Request_id: </b> #{request_id}
-p <b> task id: </b> #{task_id}
-p <b> status: </b> #{status}
-p #{singularity_task_link}
+          font(size=5)
+            span(style="font-family: Helvetica; padding: 10px")
+              p
+                span= request_id
+                span has failed
+              p
+                if !taskEverRan || taskStateLost
+                  | This is likely an infrastructure issue. No action is required.
+                else
+                  | This happened on its own. Consider investigating your process.
 
-if taskStateFailed
-  if taskEverRan
-    p<b> Recommended course of action: </b> Process terminated with non-zero exit code. <i> This is not an infrastructure issue </i>. You should consider investigating the task.
-if taskStateLost
-  if taskEverRan
-    p <b> Recommended course of action: </b> Task lost while running. This is likely an infrastructure issue. It is possible, though unlikely, that the task may still be running.
-  if !taskEverRan
-    p <b> Recommended course of action: </b> Task lost before running. This is likely an infrastructure issue. For further assistance email #{adminEmails}.
+          font(size=3)
+            span(style="padding: 10px") <br><br> Singularity will attempt to restart your task.
 
-p <b> Directory: </b> #{task_directory}
-p <b> Slave ran on: </b> #{slave_hostname}
-p: b Task Update History:
-table(style="border:1px solid black; border-collapse: collapse;")
-  tr
-    th(style="border:1px solid black; border-collapse: collapse;") DATETIME
-    th(style="border:1px solid black; border-collapse: collapse;") STATUS UPDATE
-  each task_update, i in task_updates
-    tr
-      td(style="border:1px solid black; border-collapse: collapse;")= task_update.date
-      td(style="border:1px solid black; border-collapse: collapse;")= task_update.update
+    p <b>Request ID: </b> #{request_id}
+    p <b>Task ID: </b> #{task_id}
+    p <b>Status: </b> #{status}
+    p #{singularity_task_link}
 
-p: b StdOut:
-ul
-  for line in stdout
-    li= line
-  else
-    li No updates
+    if taskStateFailed
+      if taskEverRan
+        p <b>Recommended course of action: </b> Process terminated with non-zero exit code. <i>This is not an infrastructure issue.</i> You should consider investigating the task.
+    if taskStateLost
+      if taskEverRan
+        p <b>Recommended course of action: </b> Task lost while running. This is likely an infrastructure issue. It is possible, though unlikely, that the task may still be running.
+      if !taskEverRan
+        p <b>Recommended course of action: </b> Task lost before running. This is likely an infrastructure issue. For further assistance email #{adminEmails}.
 
-p: b StdErr:
-ul
-  for line in stderr
-    li= line
-  else
-    li No updates
+    p <b>Directory: </b> #{task_directory}
+    p <b>Hostname slave ran on: </b> #{slave_hostname}
+
+    p: b Task Update History
+    table(style="border: 0; border-collapse: collapse; background: #eee")
+      tr
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Status
+        th(style="border: 0; border-collapse: collapse; padding: 12px; color: #444; border-bottom: 1px solid #ccc; text-align: left") Time
+      each task_update, i in task_updates
+        tr
+          td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= task_update.update
+          td(style="border: 0; border-collapse: collapse; padding: 12px; color: #444")= task_update.date
+
+    p: b Standard output:
+    ul
+      for line in stdout
+        li= line
+      else
+        li No updates
+
+    p: b Standard error:
+    ul
+      for line in stderr
+        li= line
+      else
+        li No updates
