Don't improperly truncate request names and render them (with the same resizing hotness as task names) hotly on request pages (Fixes #94)

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>
+    <h1 data-string-length-tens="{{ requestNameStringLengthTens }}">
         {{#hardBreak request.name}}{{/hardBreak}}
 
         <div class="header-actions">
