Small email spacing tweaks

--- a/SingularityService/src/main/resources/templates/task_not_running_warning.jade
+++ b/SingularityService/src/main/resources/templates/task_not_running_warning.jade
@@ -29,7 +29,7 @@ html
         div(style="padding-bottom: 20px")
           div(style="padding-bottom: 12px; margin: 15px 0; border-bottom: 1px solid #eee")
             h3(style="margin: 0; font-size: 20px; line-height: 1") Status
-          p It will be killed and restarted. It has been running for #{ duration_running }. It will be killed after #{ duration_left } and a new one will take its place.
+          p(style="margin-bottom: 0") It will be killed and restarted. It has been running for #{ duration_running }. It will be killed after #{ duration_left } and a new one will take its place.
 
         //- History
         div(style="padding-bottom: 20px")
